准备启用新的方法

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,87 +1,86 @@
 name: build all
 
 on:
-  push:
-    branches:
-      # - alpha
-      - master
-  pull_request:
-    branches:
-      # - alpha
-      - master
+    push:
+        branches:
+            - alpha
+    pull_request:
+        branches:
+            - alpha
 
 jobs:
-  docker-build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+    docker-build:
+        if: ${{ false }}
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v2
 
-      - name: Set up QEMU
-        id: buildx
-        uses: docker/setup-qemu-action@v1
+            - name: Set up QEMU
+              id: buildx
+              uses: docker/setup-qemu-action@v1
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+            - name: Login to DockerHub
+              uses: docker/login-action@v1
+              with:
+                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # - name: Build and push zctmdc/frp:Alpha
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     context: ./frp
-      #     platforms: linux/amd64,linux/arm64,linux/arm/v7
-      #     push: true
-      #     tags: zctmdc/frp:Alpha
-      #     cache-from: type=registry,ref=zctmdc/frp:Alpha
-      #     cache-to: type=inline
+            - name: Cache Docker layers
+              uses: actions/cache@v2
+              with:
+                  path: /tmp/.buildx-cache
+                  key: ${{ runner.os }}-buildx-${{ github.sha }}
+                  restore-keys: |
+                      ${{ runner.os }}-buildx-
 
-      # - name: Test zctmdc/frp:Alpha
-      #   run: |
-      #     docker-compose -f ./frp/docker-compose.test.yaml up --exit-code-from  frpc-test
-      #     # docker run --name frps-test -d --rm -e SUBDOMAIN_HOST=frps-test zctmdc/frp:Alpha \
-      #     #  /bin/bash -c "/usr/sbin/frps -c /etc/frp/frps.ini & \
-      #     #   sleep 10 \
-      #     #   && exit 0"
-      #     # docker run -t --rm --link frps-test:frps-test -e SUBDOMAIN_HOST=frps-test zctmdc/frp:Alpha \
-      #     #   /bin/bash -c "/usr/sbin/frpc -c /etc/frp/frpc.ini & \
-      #     #   sleep 2 \
-      #     #   && /opt/healthcheck/healthcheck.sh"
+            # - name: Build and push zctmdc/frp:Alpha
+            #   uses: docker/build-push-action@v2
+            #   with:
+            #     context: ./frp
+            #     platforms: linux/amd64,linux/arm64,linux/arm/v7
+            #     push: true
+            #     tags: zctmdc/frp:Alpha
+            #     cache-from: type=registry,ref=zctmdc/frp:Alpha
+            #     cache-to: type=inline
 
-      - name: Build test and push
-        run: |
-          skip_path="caddy-alidns my_settings .github"
-          for project in $(ls); do
-            if [[ -d ${project} && ${skip_path} != *${project}* ]]; then
-              docker buildx build \
-                --platform=linux/amd64,linux/arm64,linux/arm/v7 \
-                --cache-from type=local,src=/tmp/.buildx-cache \
-                --cache-to type=local,dest=/tmp/.buildx-cache-new \
-                --tag zctmdc/${project}:Alpha \
-                ./${project}
-              if [[ -f ${project}/docker-compose.test.yaml ]]; then 
-                docker-compose -f ./${project}/docker-compose.test.yaml up --exit-code-from  ${project}-test || continue
-                docker push ./${project}
-              fi
-            fi
-          done
+            # - name: Test zctmdc/frp:Alpha
+            #   run: |
+            #     docker-compose -f ./frp/docker-compose.test.yaml up --exit-code-from  frpc-test
+            #     # docker run --name frps-test -d --rm -e SUBDOMAIN_HOST=frps-test zctmdc/frp:Alpha \
+            #     #  /bin/bash -c "/usr/sbin/frps -c /etc/frp/frps.ini & \
+            #     #   sleep 10 \
+            #     #   && exit 0"
+            #     # docker run -t --rm --link frps-test:frps-test -e SUBDOMAIN_HOST=frps-test zctmdc/frp:Alpha \
+            #     #   /bin/bash -c "/usr/sbin/frpc -c /etc/frp/frpc.ini & \
+            #     #   sleep 2 \
+            #     #   && /opt/healthcheck/healthcheck.sh"
 
-      - # Temp fix
-        # https://github.com/docker/build-push-action/issues/252
-        # https://github.com/moby/buildkit/issues/1896
-        name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+            - name: Build test and push
+              run: |
+                  skip_path="caddy-alidns my_settings .github"
+                  for project in $(ls); do
+                    if [[ -d ${project} && ${skip_path} != *${project}* ]]; then
+                      docker buildx build \
+                        --platform=linux/amd64,linux/arm64,linux/arm/v7 \
+                        --cache-from type=local,src=/tmp/.buildx-cache \
+                        --cache-to type=local,dest=/tmp/.buildx-cache-new \
+                        --tag zctmdc/${project}:Alpha \
+                        ./${project}
+                      if [[ -f ${project}/docker-compose.test.yaml ]]; then 
+                        docker-compose -f ./${project}/docker-compose.test.yaml up --exit-code-from  ${project}-test || continue
+                        docker push ./${project}
+                      fi
+                    fi
+                  done
+
+            - # Temp fix
+              # https://github.com/docker/build-push-action/issues/252
+              # https://github.com/moby/buildkit/issues/1896
+              name: Move cache
+              run: |
+                  rm -rf /tmp/.buildx-cache
+                  mv /tmp/.buildx-cache-new /tmp/.buildx-cache
