--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -173,14 +173,20 @@ jobs:
                           if [[ "${down_dir}" == "/n2n_v3" ]]; then
                               continue
                           fi
-                          api_url=https://api.github.com/repos/lucktu/n2n/contents/${build_kernel^}${down_dir}?ref=master
-                          down_path=$(curl -k -sS ${api_url} | jq '.[]|{path}|..|.path?' | grep linux_${dn_machine:+${dn_machine}_} | grep ${build_big_version} | grep ${build_small_version} | grep ${build_commit} | sed 's/\"//g')
-                          if [[ -z "${down_path}" ]]; then
-                              LOG_WARNING "down_path 获取失败 - ${down_dir} - ${api_url}"
-                              continue
-                          fi
-                          LOG_INFO "use down_dir: ${down_dir}"
-                          break
+                     api_url=https://api.github.com/repos/lucktu/n2n/contents/${KERNEL^}${down_dir}?ref=master
+                     result="$(curl -k -sS ${api_url})"
+                     if [[ ! -z "$(echo $result || jq .message)" ]]; then
+                         LOG_ERROR "result: $result"
+                         exit 1
+                     fi
+                     result="$(echo ${result} | jq '.[]|{path}|..|.path?')"
+                     down_path=$(echo "${result}" | grep ${KERNEL}_${fn_machine}_ | grep ${BIG_VERSION} | grep ${SMALL_VERSION} | grep ${COMMIT} | sed 's/\"//g')
+                     if [[ -z "${down_path}" ]]; then
+                         LOG_WARNING "down_path 获取失败 - ${down_dir} - ${api_url}"
+                         continue
+                     fi
+                     LOG_INFO "use down_dir: ${down_dir}"
+                     break
                       done
                       case ${fn_platform} in
                       x64)
