--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -174,6 +174,7 @@ jobs:
                               continue
                           fi
                      api_url=https://api.github.com/repos/lucktu/n2n/contents/${KERNEL^}${down_dir}?ref=master
+                     LOG_INFO "api_url: ${api_url}"
                      result="$(curl -k -sS ${api_url})"
                      if [[ ! -z "$(echo $result || jq .message)" ]]; then
                          LOG_ERROR "result: $result"
