同步 修复了一个匹配失败的错误

--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -176,7 +176,7 @@ jobs:
                       api_url=https://api.github.com/repos/lucktu/n2n/contents/${KERNEL^}${down_dir}?ref=master
                       LOG_INFO "api_url: ${api_url}"
                       resp="$(curl -k -sS ${api_url})"
-                      if [[ ! -z "$(echo $resp || jq .message)" ]]; then
+                      if [[ ! -z $(echo "$resp" || jq '.message') && -z $(echo "${resp}" | jq '.[]|{path}') ]]; then
                           LOG_ERROR "resp: $resp"
                           exit 1
                       fi
@@ -188,7 +188,6 @@ jobs:
                       fi
                       LOG_INFO "use down_dir: ${down_dir}"
                       break
-                      done
                       case ${fn_platform} in
                       x64)
                           add_platform="linux/amd64"
