--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -153,21 +153,32 @@ jobs:
                       case ${fn_platform} in
                       x64)
                           dn_machine="x64"
+                          fn_machine="x64"
                           ;;
                       x86)
                           dn_machine="x86"
+                          fn_machine="x86"
                           ;;
-                      "arm64(aarch64)")
+                      arm64 | aarch64)
                           dn_machine="arm64"
+                          fn_machine="arm64(aarch64)"
+                          ;;
+                      arm64eb | aarch64eb)
+                          dn_machine="arm64eb"
+                          fn_machine="arm64eb(aarch64eb)"
                           ;;
                       arm)
                           dn_machine="arm"
+                          fn_machine="arm"
                           ;;
                       *)
                           LOG_ERROR "不支持的CPU架构类型 - ${fn_platform}"
-                          exit 1
+                          dn_machine=${fn_platform}
+                          fn_machine=${fn_platform}
                           ;;
                       esac
+                      LOG_INFO "dn_machine: ${dn_machine}, fn_machine: ${fn_machine}"
+
                       # 遍历可能存在的文件夹进行匹配
                       for down_dir in "" "/Old/linux_${dn_machine}" "/n2n_${build_big_version}"; do
                           if [[ "${down_dir}" == "/n2n_v3" ]]; then
