--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -192,10 +192,10 @@ jobs:
                               exit 1
                           fi
                           result=$(echo "${resp}" | jq '.[]|{path}|..|.path?')
-                          down_path=$(echo "${result}" | grep ${KERNEL}_${fn_machine}_ | grep ${BIG_VERSION} | grep ${SMALL_VERSION} | grep ${COMMIT} | sed 's/\"//g')
+                          down_path=$(echo "${result}" | grep ${KERNEL}_${fn_machine}_ | grep ${build_big_version} | grep ${build_small_version} | grep ${build_commit} | sed 's/\"//g')
                           if [[ -z "${down_path}" ]]; then
                               LOG_WARNING "down_path 获取失败 - ${down_dir} - ${api_url}"
-                              LOG_WARNING "${KERNEL}_${fn_machine}_ ${BIG_VERSION} v.${SMALL_VERSION} ${COMMIT}"
+                              LOG_WARNING "${KERNEL}_${fn_machine}_ ${build_big_version} v.${build_small_version} ${build_commit}"
                               LOG_ERROR "resp: $resp"
                               LOG_ERROR "result : $result"
                               LOG_ERROR "path[] : $(echo ${resp} | jq '.[]|{path}')"
