--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -365,7 +365,7 @@ jobs:
 
             - name: Test
               run: |
-                  docker run --rm ${{ env.REGISTRY }}/${{ github.actor }}/${{ env.APP_NAME }}:test
+                  docker run --rm ${{ env.REGISTRY }}/${{ github.actor }}/${{ env.APP_NAME }}:test phddns status
 
             # Build and push Docker image with Buildx (don't push on PR)
             # https://github.com/docker/build-push-action
