--- a/n2n_lucktu/Dockerfile
+++ b/n2n_lucktu/Dockerfile
@@ -19,10 +19,10 @@ ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get -qq update
 
 RUN apt-get -qq -y install \
-  curl wget unzip jq git
+  bash curl wget unzip jq git
 
 ARG CLONE
-RUN [ $CLONE ] && git clone https://github.com/lucktu/n2n.git /tmp/n2n
+RUN [ "$CLONE" ] && git clone https://github.com/lucktu/n2n.git /tmp/n2n
 
 
 ARG KERNEL=linux
