--- a/n2n_lucktu/Dockerfile
+++ b/n2n_lucktu/Dockerfile
@@ -22,7 +22,7 @@ RUN apt-get -qq -y install \
   bash curl wget unzip jq git
 
 ARG CLONE
-RUN [ "$CLONE" ] && git clone https://github.com/lucktu/n2n.git /tmp/n2n
+RUN [[ "$CLONE" ]] && git clone https://github.com/lucktu/n2n.git /tmp/n2n
 
 
 ARG KERNEL=linux
