--- a/n2n_lucktu/Dockerfile
+++ b/n2n_lucktu/Dockerfile
@@ -21,9 +21,8 @@ RUN apt-get -qq update
 RUN apt-get -qq -y install \
   bash curl wget unzip jq git
 
-ARG CLONE=true
+ARG CLONE='true'
 RUN [[ "$CLONE" ]] && git clone https://github.com/lucktu/n2n.git /tmp/n2n
-
 
 ARG KERNEL=linux
 # 用于自定义机型编译,未自动识别时请赋值
