跳过 编译/推送

--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -21,7 +21,7 @@ env:
     # github.repository as <account>/<repo>
     KERNEL: linux
     MACHINE: ""
-    CLONE: 'true'
+    CLONE: "true"
     # BIG_VERSION: v3
     # SMALL_VERSION: 3.1.1-16
     # COMMIT: 1200
@@ -280,7 +280,7 @@ jobs:
                   if [[ "${{ env.FORCE_PUSH }}" ]]; then
                       LOG_WARNING "强制 编译/推送"
                   elif [[ "${last_pulled_date,,}" != "null" ]]; then
-                      echo "skip_build_push=true" >> $GITHUB_OUTPUT
+                      echo "skip_build_push='true'" >> $GITHUB_OUTPUT
                       LOG_INFO "跳过 编译/推送"
                       exit 0
                   else
@@ -289,7 +289,7 @@ jobs:
 
     build_n2n_lucktu:
         needs: [check_version, check_push]
-        if: ${{ needs.check_push.outputs.skip_build_push != true }}
+        if: ${{ needs.check_push.outputs.skip_build_push != 'true' }}
         runs-on: ubuntu-latest
         env:
             APP_NAME: n2n_lucktu
