--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -281,7 +281,7 @@ jobs:
                   if [[ "${{ env.FORCE_PUSH }}" ]]; then
                       LOG_WARNING "强制 编译/推送"
                   elif [[ "${last_pulled_date,,}" != "null" ]]; then
-                      echo "skip_build_push='true'" >> $GITHUB_OUTPUT
+                      echo 'skip_build_push=true' >> $GITHUB_OUTPUT
                       LOG_INFO "跳过 编译/推送"
                       exit 0
                   else
@@ -307,6 +307,8 @@ jobs:
               run: |
                   echo  ${{ needs.check_push.outputs.skip_build_push }}
                   echo  ${{ needs.check_push.outputs.skip_build_push != true }}
+                  echo  ${{ needs.check_push.outputs.skip_build_push != 'true' }}
+                  echo  ${{ needs.check_push.outputs.skip_build_push != "true" }}
 
             - name: Checkout repository
               uses: actions/checkout@v3
