--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -290,7 +290,7 @@ jobs:
 
     build_n2n_lucktu:
         needs: [check_version, check_push]
-        if: ${{ needs.check_push.outputs.skip_build_push != true }}
+        if: ${{ needs.check_push.outputs.skip_build_push != 'true' }}
         runs-on: ubuntu-latest
         env:
             APP_NAME: n2n_lucktu
@@ -305,7 +305,7 @@ jobs:
             - name: echo outputs
               id: check_outputs
               run: |
-                  echo  ${{ needs.check_push.outputs.skip_build_push }}
+                  echo  "${{ needs.check_push.outputs.skip_build_push }}"
                   echo  ${{ needs.check_push.outputs.skip_build_push != true }}
                   echo  ${{ needs.check_push.outputs.skip_build_push != 'true' }}
 
