--- a/n2n_ntop/config/edge.conf
+++ b/n2n_ntop/config/edge.conf
@@ -1,20 +1,39 @@
 # 虚拟网卡名字
+# EDGE_TUN
 -d=T3
+
 # edge ip
+# EDGE_IP
+# -a=dhcp:0.0.0.0
 -a=10.3.0.78
+
 # community 名字
+# EDGE_COMMUNITY
 -c=n2n
+
 # community 密码
+# EDGE_KEY
 -k=test
+
+# SUPERNODE_HOST:SUPERNODE_PORT
 # supernode 地址和端口
 -l=172.77.5.10:10090
-#
--e=auto
+
+# 使用 AES 加密算法加密传输的数据
+# EDGE_ENCRYPTION
+-A3
+
+# 作为首选播发提供的本地IP地址
+# -e=auto
+
 # 允许多播mac地址
--E
+# -E
+
 # 允许edge直接的网络转发
--r
+# -r
+
 # 详细模式
--v
+# -v
+
 # 前台运行而不是后台
--f
+# -f
