--- a/.github/workflows/frp.yml
+++ b/.github/workflows/frp.yml
@@ -28,8 +28,8 @@ jobs:
             - name: Login to DockerHub
               uses: docker/login-action@v1
               with:
-                  username: ${{ secrets.DOCKERHUB_USERNAME }}
-                  password: ${{ secrets.DOCKERHUB_TOKEN }}
+                  username: ${{ secrets.REGISTRY_USERNAME }}
+                  password: ${{ secrets.REGISTRY_TOKEN }}
             - name: Build and push
               uses: docker/build-push-action@v2
               with:
