--- a/n2n_ntop/docker-compose.test.yaml
+++ b/n2n_ntop/docker-compose.test.yaml
@@ -1,105 +1,101 @@
 version: "3"
 services:
-  n2n_supernode-test:
+  test-n2n_supernode:
     # build:
     #   context: .
     #   dockerfile: Dockerfile
-    image: zctmdc/n2n_ntop:Alpha
+    image: zctmdc/n2n_ntop
+    container_name: test_n2n_supernode
     restart: always
     privileged: true
-    ports:
-      - 10086:10086/udp
     environment:
       - MODE=SUPERNODE
-      - SUPERNODE_PORT=10086
-      - N2N_ARGS=-f
+      - SUPERNODE_PORT=10090
 
-  n2n_edge_dhcpd-test:
+  test-n2n_edge_dhcpd:
     depends_on:
-      - n2n_supernode-test
-    image: zctmdc/n2n_ntop:Alpha
+      - test-n2n_supernode
+    image: zctmdc/n2n_ntop
+    container_name: test_n2n_edge_dhcpd
     restart: always
     privileged: true
     # network_mode: host
     environment:
       - MODE=DHCPD
-      - SUPERNODE_HOST=n2n_supernode-test
-      - SUPERNODE_PORT=10086
-      - EDGE_TUN=edge_dhcpd
+      - SUPERNODE_HOST=test-n2n_supernode
+      - SUPERNODE_PORT=10090
+      - EDGE_TUN=test_edge_dhcpd
       - EDGE_IP=10.10.10.1
       - EDGE_COMMUNITY=n2n
       - EDGE_KEY=test
       - EDGE_ENCRYPTION=A3
-      - N2N_ARGS=-f
     # volumes:
     #   - ./config/dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
     links:
-      - n2n_supernode-test
+      - test-n2n_supernode
 
-  n2n_edge_dhcp-test:
+  test-n2n_edge_dhcpc:
     depends_on:
-      - n2n_edge_dhcpd-test
-      - n2n_supernode-test
-    image: zctmdc/n2n_ntop:Alpha
+      - test-n2n_edge_dhcpd
+      - test-n2n_supernode
+    image: zctmdc/n2n_ntop
+    container_name: test_n2n_edge_dhcpc
     restart: always
     privileged: true
     # network_mode: host
     environment:
-      - MODE=DHCP
-      - SUPERNODE_HOST=n2n_supernode-test
-      - SUPERNODE_PORT=10086
-      - EDGE_TUN=edge_dhcp
+      - MODE=DHCPC
+      - SUPERNODE_HOST=test-n2n_supernode
+      - SUPERNODE_PORT=10090
+      - EDGE_TUN=test_edge_dhcpc
       - EDGE_COMMUNITY=n2n
       - EDGE_KEY=test
       - EDGE_ENCRYPTION=A3
-      - N2N_ARGS=-f
     links:
-      - n2n_supernode-test
+      - test-n2n_supernode
 
-  n2n_edge_static-test:
+  test-n2n_edge_static:
     depends_on:
-      - n2n_supernode-test
-    image: zctmdc/n2n_ntop:Alpha
+      - test-n2n_supernode
+    image: zctmdc/n2n_ntop
+    container_name: test_n2n_edge_tatic
     restart: always
     privileged: true
     # network_mode: host
     environment:
       - MODE=STATIC
-      - SUPERNODE_HOST=n2n_supernode-test
-      - SUPERNODE_PORT=10086
-      - EDGE_TUN=edge_static
+      - SUPERNODE_HOST=test-n2n_supernode
+      - SUPERNODE_PORT=10090
+      - EDGE_TUN=test_edge_static
       - EDGE_IP=10.10.10.10
       - EDGE_COMMUNITY=n2n
       - EDGE_KEY=test
       - EDGE_ENCRYPTION=A3
-      - N2N_ARGS=-f
     links:
-      - n2n_supernode-test
+      - test-n2n_supernode
 
-  n2n_ntop-test:
+  test-n2n_healthcheck:
     depends_on:
-      - n2n_edge_dhcpd-test
-      - n2n_supernode-test
-    image: zctmdc/n2n_ntop:Alpha
+      - test-n2n_edge_dhcpd
+      - test-n2n_supernode
+    image: zctmdc/n2n_ntop
+    container_name: test_n2n_edge_healthcheck
     restart: always
     privileged: true
     # network_mode: host
     environment:
       - MODE=DHCP
-      - SUPERNODE_HOST=n2n_supernode-test
-      - SUPERNODE_PORT=10086
-      - EDGE_TUN=edge_dhcp
+      - SUPERNODE_HOST=test-n2n_supernode
+      - SUPERNODE_PORT=10090
+      - EDGE_TUN=test_edge_healthcheck
       - EDGE_COMMUNITY=n2n
       - EDGE_KEY=test
       - EDGE_ENCRYPTION=A3
-      - N2N_ARGS=-f
     links:
-      - n2n_supernode-test
-    command: 
-      [ 
-        "/bin/bash" ,
-        "-c" ,
-        "/usr/local/sbin/run.sh &\
-        sleep 2 \
-        && /usr/local/sbin/n2n_healthcheck.sh"
+      - test-n2n_supernode
+    command:
+      [
+        "/bin/bash",
+        "-c",
+        "/usr/local/sbin/run.sh &sleep 2 && /usr/local/sbin/n2n_healthcheck.sh"
       ]
