--- a/.github/workflows/docker-publish-n2n.yml
+++ b/.github/workflows/docker-publish-n2n.yml
@@ -216,7 +216,7 @@ jobs:
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
       - name: Build and load Docker image
-        id: build-and-push
+        id: build-and-load
         uses: docker/build-push-action@v3
         with:
           context: .
