--- a/.github/workflows/docker-publish-n2n.yml
+++ b/.github/workflows/docker-publish-n2n.yml
@@ -70,7 +70,7 @@ jobs:
         id: init-build-version
         run: |
           PROJECT_ROOT_DIR=$(pwd)
-          echo "init-version - PROJECT_ROOT_DIR: ${PROJECT_ROOT_DIR}"
+          echo "init-build-version - PROJECT_ROOT_DIR: ${PROJECT_ROOT_DIR}"
           cd ${{ env.APP_NAME }}/scripts
             chmod +x *.sh
             . init_logger.sh
@@ -93,7 +93,7 @@ jobs:
         with:
           # The target URL
           # Required: true if custom-config is not set
-          url: https://hub.docker.com/v2/repositories/zctmdc/n2n_lucktu/tags/${{ steps.init-version.outputs.BUILD_VERSION_B_S_rC }}
+          url: https://hub.docker.com/v2/repositories/zctmdc/n2n_lucktu/tags/${{ steps.init-build-version.outputs.BUILD_VERSION_B_S_rC }}
       - run: echo ${{ steps.api.outputs.response.data }}
       - name: Check pushed architectures
         id: get-pushed-architectures
@@ -148,7 +148,7 @@ jobs:
         id: get_tag_last_pushed
         uses: sergeysova/jq-action@v2
         with:
-          cmd: curl -k -sS https://hub.docker.com/v2/repositories/${{ secrets.REGISTRY_USERNAME }}/n2n_ntop/tags/${{ needs.init-version.outputs.BUILD_VERSION_B_S_rC }} | jq '.tag_last_pushed'
+          cmd: curl -k -sS https://hub.docker.com/v2/repositories/${{ secrets.REGISTRY_USERNAME }}/n2n_ntop/tags/${{ needs.init-build-version.outputs.BUILD_VERSION_B_S_rC }} | jq '.tag_last_pushed'
 
       - name: Check tag_last_pushed
         id: tag_last_pushed
@@ -166,11 +166,11 @@ jobs:
           # e.g. "2022-10-30T19:29:49.877019Z"
           last_pulled_date=${{ steps.get_tag_last_pushed.outputs.value }}
           echo "last_pulled_date=${last_pulled_date}" >> $GITHUB_OUTPUT
-          LOG_INFO "check tag - ${{ needs.init-version.outputs.BUILD_VERSION_B_S_rC }}"
+          LOG_INFO "check tag - ${{ needs.init-build-version.outputs.BUILD_VERSION_B_S_rC }}"
           LOG_INFO "last_pulled_date - ${last_pulled_date}"
           if [[ "true" == "${{ env.FORCE_PUSH }}" || "true" == "${{ inputs.force_push }}" ]]; then
               LOG_WARNING "强制 编译/推送"
-          elif [[ "${last_pulled_date,,}" != "null" || "${{ needs.init-version.outputs.BUILD_PLATFORMS }}" == "" ]]; then
+          elif [[ "${last_pulled_date,,}" != "null" || "${{ needs.init-build-version.outputs.BUILD_PLATFORMS }}" == "" ]]; then
               echo "skip_build_push=true" >> $GITHUB_OUTPUT
               LOG_INFO "跳过 编译/推送"
               exit 0
