--- a/.github/workflows/docker-publish-n2n.yml
+++ b/.github/workflows/docker-publish-n2n.yml
@@ -94,7 +94,9 @@ jobs:
           # The target URL
           # Required: true if custom-config is not set
           url: https://hub.docker.com/v2/repositories/zctmdc/n2n_lucktu/tags/${{ steps.init-build-version.outputs.BUILD_VERSION_B_S_rC }}
-      - run: echo ${{ steps.api.outputs.response.data }}
+      
+      - run: echo ${{ steps.get-pushed.outputs.response }}
+
       - name: Check pushed architectures
         id: get-pushed-architectures
         uses: sergeysova/jq-action@v2
