--- a/.github/workflows/docker-publish-n2n.yml
+++ b/.github/workflows/docker-publish-n2n.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: build n2n_ntop
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -94,20 +94,20 @@ jobs:
           # The target URL
           # Required: true if custom-config is not set
           url: https://hub.docker.com/v2/repositories/zctmdc/n2n_lucktu/tags/${{ steps.init-build-version.outputs.BUILD_VERSION_B_S_rC }}
-      
-      - run: echo '{{ steps.get-pushed.outputs.response }}'
+
+      - run: echo '${{ steps.get-pushed.outputs.response }}'
 
       - name: Check pushed architectures
         id: get-pushed-architectures
         uses: sergeysova/jq-action@v2
         with:
-          cmd: echo '{{ steps.get-pushed.outputs.response }}' | jq '.data.images[]|{architecture}|..|.architecture?' | sed 's/\"//g'
+          cmd: echo '${{ steps.get-pushed.outputs.response }}' | jq '.data.images[]|{architecture}|..|.architecture?' | sed 's/\"//g'
 
       - name: Check pushed digest
         id: get-pushed-digest
         uses: sergeysova/jq-action@v2
         with:
-          cmd: echo '{{ steps.get-pushed.outputs.response }}' | jq '.data.digest' | sed 's/\"//g'
+          cmd: echo '${{ steps.get-pushed.outputs.response }}' | jq '.data.digest' | sed 's/\"//g'
 
       - name: Check init-build-infos
         id: init-build-infos
